# ecomerce-langgraph

./: .gitignore  compose.yml  faq.txt  ingestion.py  main.py  pyproject.toml  settings.py
core/: container.py  instances.py
core/auth/app/usecases/: get_my_profile_usecase.py  get_my_user_billing_usecase.py  signin_usecase.py  signup_usecase.py  update_user_billing_usecase.py
core/auth/domain/: user_billing_model.py  user_billing_schema.py  user_model.py  user_schema.py
core/auth/presenters/controllers/: auth_controller.py  user_controller.py
core/auth/presenters/dtos/: signin_dto.py  signup_dto.py  update_user_billing_dto.py
core/chatbot/app/graph/: consts.py  graph.py  state.py  tools.py
core/chatbot/app/graph/assistant/: assistant.py
core/chatbot/app/graph/chain/: router.py
core/chatbot/app/graph/nodes/: retrieve_answer_node.py
core/chatbot/app/retriever/: retriever.py
core/chatbot/presenters/controllers/: web.py
core/managment/categories/app/usecases/: create_category_usecase.py  get_categories_usecase.py  remove_category_usecase.py  update_category_usecase.py
core/managment/categories/domain/: category_model.py  category_schema.py
core/managment/categories/presenters/controllers/: categories_controller.py
core/managment/products/domain/: product_model.py  product_schema.py
core/managment/products/infra/: aws_uploader_sdk.py
core/operations/cart/domain/: cart_item_schema.py  cart_schema.py
core/operations/orders/domain/: delivery.py  order.py
shared/db/: database.py  milvus.py
shared/utils/: jwt.py
(+22 files in other folders)
